--- a/app/src/main/res/layout/activity_ko_main.xml
+++ b/app/src/main/res/layout/activity_ko_main.xml
@@ -15,6 +15,7 @@
         android:layout_marginBottom="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        tools:listitem="@layout/post_layout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
