--- a/app/src/main/res/layout/activity_fo_post_detail.xml
+++ b/app/src/main/res/layout/activity_fo_post_detail.xml
@@ -99,7 +99,17 @@
             app:layout_constraintVertical_bias="0.067"
             app:srcCompat="@drawable/ic_launcher_background" />
 
-
+        <Button
+            android:id="@+id/bt_pay1"
+            android:layout_width="162sp"
+            android:layout_height="51sp"
+            android:text="pay"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.064"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.927" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
